<resources>
    <string name="app_name" translatable="false">ReversISEC</string>
    <string name="title_activity_take_photo">Take Photo</string>
    <string name="title_activity_game">Game</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign In</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">E-mail</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_singleP">Single Player</string>
    <string name="app_multiP">Multi Player</string>
    <string name="app_highScores">Hight Scores</string>


    <string name="app_player">Player</string>
    <string name="app_createGame">Create Game</string>
    <string name="app_joinGame">Join Game</string>
    <string name="app_twoPlayerOneDevice">2 Player - 1 Device</string>
    <string name="app_twoPlayerTwoDevice">2 Player - 2 Device</string>
    <string name="app_newGame">New Game</string>
    <string name="app_loadGame">Load game</string>
    <string name="app_options">Options</string>
    <string name="title_activity_main">Actividade principal</string>
    <string name="app_Connection">Connection</string>
    <string name="app_ip">Insert this IP on client device</string>
    <string name="app_connectServer">Connecting to the server</string>
    <string name="app_profileName">Name</string>
    <string name="app_profileEmail">Email</string>
    <string name="app_profileAge">Age</string>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="or_text">Or</string>
    <string name="app_Camera">Camera</string>
    <string name="app_credits">Credits</string>
    <string name="app_CPU" translatable="false">CPU</string>
    <string name="invalid_location">Invalid Location</string>
    <string name="wait_for_your_turn">Wait for your turn</string>

</resources>
