<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:textSize="48dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center|bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="bottom|center">
            <ImageView
                android:background="@drawable/ic_reversi_big_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@drawable/ic_reversi_big_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|center">
            <ImageView
                android:background="@drawable/ic_reversi_big_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@drawable/ic_reversi_big_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </LinearLayout>




</LinearLayout>